@@ -1,3 +1,9 @@
+2013-09-13  Jason Merrill  <jason@redhat.com>
+
+	PR c++/58273
+	* pt.c (any_type_dependent_elements_p): Actually check for
+	type-dependence, not value-dependence.
+
 2013-08-20  Jason Merrill  <jason@redhat.com>
 
 	PR c++/58119
